# fastapi-postgres-smart-library

./: README.md  alembic.ini  main.py  pyproject.toml
app/: alembic.ini  database.py  main.py
app/api/v1/: __init__.py  books.py  loans.py  stats.py  users.py
app/controllers/: __init__.py  book.py  user.py
app/core/: __init__.py  config.py  database.py
app/exceptions/: __init__.py
app/models/: base.py  book.py  loan.py  user.py
app/repositories/: book.py  loan.py  stats.py  user.py
app/routers/: book.py  loan.py  user.py
app/schemas/: book.py  loan.py  stats.py  user.py
app/services/: __init__.py  book.py  loan.py  stats.py  user.py
app/utils/: response.py
book-service/: pyproject.toml
book-service/app/: main.py
book-service/app/exceptions/: http_exceptions.py
book-service/app/models/: book.py
book-service/app/schemas/: book.py
book-service/app/services/: book.py
book-service/migrations/: env.py
book-service/migrations/versions/: a79eb3586808_create_books_table.py
loan-service/: pyproject.toml
loan-service/app/: main.py
loan-service/app/core/: config.py
loan-service/app/database/: init_db.py
loan-service/app/exceptions/: http_exceptions.py
loan-service/app/models/: loan.py
loan-service/app/schemas/: loan.py
loan-service/app/services/: external_service.py  loan.py
migrations/: env.py  script.py.mako
tests/: conftest.py  test_book.py  test_loan.py  test_user.py
user-service/: pyproject.toml
user-service/app/: main.py
user-service/app/exceptions/: http_exceptions.py
user-service/migrations/: env.py
(+8 files in other folders)
